# steam-pulse

./: .dockerignore  .env.example  .env.production  .env.staging  .gitignore  ARCHITECTURE.org  CLAUDE.md  Dockerfile  INVESTIGATION_SUMMARY.md  README.md  ROADMAP.md  Rusty's_Retirement_steampulse.html  TEST_PROMPT_READY.md  Team_Fortress_2_steampulse.html  cdk.context.json  cdk.json  cdk_best_practices.md  docker-compose.yml  main.py  next-prompt.txt  pyproject.toml  pyrightconfig.json  steam-pulse-query.org  steam-pulse.org  steam_analyzer_prompt.md  steampulse-design.org  steampulse_complete.txt  steamwebapi-openapi-doc.json  tiered-refresh-schedule.org
.claude/: settings.json
.claude/commands/: analyze-game.md  cdk-diff.md  check-schema.md  new-stack.md
.github/: copilot-instructions.md
.github/workflows/: e2e.yml  python-tests.yml
crawler/: app_crawler.py  review_crawler.py
doc/: analytics-pages-nav.org  anthropic-rate-limits.md  cloudwatch-queries.org  frontend-architecture.md  genre-report-questions.md  human+quality_review_rubric.org  multi-region-crawl.org  prompt-strategy.org  references.org  review-analysis-pipeline.md  steam-apis.org  strategic-questions.org  test_games.org  top-100-questions.org
doc/research/: analytics-builder-lens.org  ux-ui-references.org
doc/runbooks/: acm-cert-validation.org  db-backup-restore.org  prompt-eval-pipeline.org  testing-frontendless.org
doc/sequences/: 00_game_discovery.org
docs/: career-visibility-plan.org  frontend-data-flow.txt  reddit-launch-plan.org
docs/decisions/: 2026-04-26-aws-vs-gcp-and-warehouse.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.production.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap-config.ts  sitemap.ts
frontend/components/: ContactEmail.tsx
frontend/lib/: analytics.ts  api.ts  auth.ts  author.ts  compare-metrics.tsx  compare-types.ts  constants.ts  format.ts  lens-registry.ts  pro.tsx  review-display.ts  styles.ts  toolkit-state.ts  track.ts  types.ts  use-compare-data.ts
frontend/tests/: about.spec.ts  accessibility.spec.ts  analytics.spec.ts  builder-lens.spec.ts  compare.spec.ts  explore.spec.ts  game-no-report.spec.ts  game-report.spec.ts  genre-page.spec.ts  genre-tag-developer.spec.ts  home.spec.ts  market-reach.spec.ts  mock-api-server.mjs  navbar.spec.ts  navigation-flows.spec.ts  new-releases.spec.ts  per-entity-analytics.spec.ts  search.spec.ts  seo.spec.ts  trends-lens.spec.ts
infra/: app.py  application_stage.py  main.tf  outputs.tf  pipeline_stack.py  variables.tf
infra/cloudfront_functions/: inject_sponsor.js
infra/stacks/: analysis_stack.py  app_stack.py  backend_stack.py  batch_analysis_stack.py  certificate_stack.py  common_stack.py  compute_stack.py  crawler_stack.py  data_stack.py  delivery_stack.py  foundation_stack.py  frontend_stack.py  lambda_stack.py  messaging_stack.py  monitoring_stack.py  network_stack.py  spoke_stack.py  sqs_stack.py
reports/state_of_roguelike_deckbuilder/: state_of_roguelike_deckbuilder.html  state_of_roguelike_deckbuilder.org  state_of_roguelike_deckbuilder.tex
scripts/: aws-costs.sh  backfill_player_tags.py  backfill_price_currency.py  backfill_revenue_estimates.py  backfill_wayback_dates.py  backup_db.sh  bootstrap-regions.sh  concept_doctor_v1.py  crawl_local.py  delete-legacy-secrets.sh  deploy.sh  fill_report.py  invalidate-cdn.sh  launch-checklist.org  logs.py  migrate-secrets-to-ssm.sh  migrate_slugs.py  niche_scout_v1.py  populate_catalog.py  push_discovered_at_backfill.sh  reddit_drafter_v1.py  review_backfill_gaps.py  seed.py  sp.py  tag_doctor_v1.py  tail.py  test_bedrock_batch.py  test_bedrock_realtime.py  test_llm.py  test_steam_reviews.py  trend_spotter_v1.py  trigger_batch_analysis.py  trigger_crawl.py  trigger_genre_synthesis.py  tui.py  warm_game_pages.py
scripts/dev/: backfill_review_date_range.py  cost_estimate.py  db-tunnel.sh  import_from_prod.py  invoke-analysis.sh  invoke-app-crawler.sh  invoke-crawler.sh  invoke-review-crawler.sh  migrate.sh  pull_analysis_from_prod.py  push-to-staging.sh  push_analysis_to_prod.py  run-api.sh  run_phase.py  run_test_games.py  seed-local.sh  start-local.sh
scripts/ops/: update_editorial.py
scripts/prompts/: 01-landing-hero-unified.md  CLEANUP.md  (+136 more)
src/library-layer/: pyproject.toml
src/library-layer/library_layer/: analyzer.py  analyzer_models.py  config.py  events.py  fetcher.py  reporter.py  schema.py  steam_source.py  storage.py
src/library-layer/library_layer/analytics/: metrics.py
src/library-layer/library_layer/llm/: __init__.py  anthropic_batch.py  anthropic_converse.py  backend.py  batch.py  converse.py
src/library-layer/library_layer/models/: __init__.py  analyzer_models.py  batch_execution.py  catalog.py  game.py  genre_synthesis.py  metadata.py  new_release.py  report.py  review.py  tag.py  temporal.py
src/library-layer/library_layer/prompts/: __init__.py  genre_synthesis_v1.py
src/library-layer/library_layer/repositories/: __init__.py  analysis_request_repo.py  analytics_repo.py  base.py  batch_execution_repo.py  catalog_repo.py  catalog_report_repo.py  chunk_summary_repo.py  game_repo.py  genre_synthesis_repo.py  job_repo.py  matview_repo.py  merged_summary_repo.py  new_releases_repo.py  report_repo.py  review_repo.py  steamspy_repo.py  tag_repo.py  waitlist_repo.py  waitlist_suggestion_repo.py
src/library-layer/library_layer/services/: __init__.py  analysis_service.py  analytics_service.py  catalog_report_service.py  catalog_service.py  crawl_service.py  genre_synthesis_service.py  new_releases_service.py  revenue_estimator.py
src/library-layer/library_layer/utils/: __init__.py  chunking.py  db.py  email.py  events.py  scores.py  slugify.py  sqs.py  ssm.py  steam_metrics.py  time.py
steampulse/: __init__.py  analyzer.py  api.py  chat.py  fetcher.py  main.py  prompting_claude.org  reporter.py  steam_source.py  storage.py
tests/: conftest.py  test_api.py  test_app_crawler.py  test_config.py  test_events.py  test_review_crawler.py  test_steam_source.py
(+454 files in other folders)
