[tool.poetry]
name = "steampulse"
version = "0.1.0"
description = "AI-powered Steam review analytics for indie game developers"
authors = ["SteamPulse <hello@steampulse.gg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
httpx = ">=0.27.0"
anthropic = ">=0.40.0"
psycopg2-binary = ">=2.9.9"
resend = ">=2.0.0"
python-dotenv = ">=1.0.0"
aws-lambda-powertools = {extras = ["tracer"], version = "^3.25.0"}
rich = "^14.3.3"
library-layer = {path = "src/library-layer", develop = true}
lambda-functions = {path = "src/lambda-functions", develop = true}
pydantic-settings = "^2.13.1"
instructor = ">=1.0.0"
yoyo-migrations = ">=9.0.0"

[tool.poetry.group.infra]
optional = true

[tool.poetry.group.infra.dependencies]
aws-cdk-lib = ">=2.180.0"
constructs = ">=10.0.0"
"aws-cdk.aws-lambda-python-alpha" = ">=2.180.0a0"
cdk-monitoring-constructs = ">=8.0.0"
cdk-fck-nat = ">=1.6.0"

[tool.poetry.group.crawler]
optional = true

[tool.poetry.group.crawler.dependencies]
boto3 = ">=1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"
ruff = ">=0.9.0"
mypy = ">=1.13.0"
moto = {extras = ["secretsmanager", "sqs", "stepfunctions"], version = "^5.1.22"}
pytest-httpx = "^0.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
steampulse = "main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade — enforce modern Python 3.12 syntax
    "B",    # flake8-bugbear — common bugs and design issues
    "ASYNC",# flake8-async — async/await best practices
    "ANN",  # flake8-annotations — type hints required
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ANN401",  # allow Any where genuinely needed
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["steampulse"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
