[tool.poetry]
name = "library-layer"
version = "0.1.0"
description = "Shared Lambda layer: runtime deps + steampulse framework"
packages = [{ include = "library_layer" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.27.0"
psycopg2-binary = ">=2.9.9"
boto3 = ">=1.34.0"
anthropic = ">=0.40.0"
aws-lambda-powertools = { version = ">=3.0.0", extras = ["tracer"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
